@@ -17,6 +17,8 @@ Release ...
   POSIX.1-2001.
 * tr: The -C option from POSIX.1-2001 has been added.
 * dd: With 'conv=unblock', the last block was not converted.
+* csplit, ed, expr, grep, nl, pax, pg, sed: The POSIX versions no longer
+  accept reverted ranges like '[b-a]' in regular expressions.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
